# rr-search

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/frontend/: package.json
apps/frontend/components/: Markdown.tsx  SearchBar.tsx
apps/frontend/pages/: _app.tsx  index.tsx  search.tsx
apps/frontend/pages/api/: search.ts
apps/scrape/: .gitignore  package.json  tsconfig.json
apps/scrape/src/: export.ts  index.ts  utils.ts
embed/: embed.ipynb  hello.py  pyproject.toml
src/: index.ts
