[project]
name = "embed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cowsay>=6.1",
    "ipywidgets>=8.1.5",
    "markdownify>=0.14.1",
    "pandas>=2.2.3",
    "pinecone[grpc]>=5.4.2",
    "python-dotenv>=1.0.1",
    "voyageai>=0.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
